@@ -1,10 +1,10 @@
-#Fri Oct 23 12:04:32 CEST 2009
+#Sun Oct 25 17:47:52 CET 2009
 =\=\=\=\=\=\=
 <<<<<<<=.mine
 >>>>>>>=.r606
-clsCnt=345
+clsCnt=349
 eclipse.preferences.version=1
-locCnt=41257
+locCnt=41584
 pkgCnt=105
-sTime=Freitag, 23. Oktober 2009 12\:04 Uhr MESZ
+sTime=Sonntag, 25. Oktober 2009 17\:47 Uhr MEZ
 srcCnt=4
